1998-05-22  Ian Lance Taylor  <ian@cygnus.com>

        * server.c (server_updated): Correct test for whether to unlink
        the file.

1998-05-20  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* wrapper.c (wrap_add): Disable -t/-f wrappers at least until the
	serious bug can be fixed.

1998-05-15  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* checkout.c (checkout): Call server_pathname_check on the
	argument to "cvs co -d".
	* server.c (server_pathname_check): Add comment about how we could
	be handling absolute pathnames.
	* sanity.sh (abspath): Rewrite the tests which run "cvs co -d /foo"
	for remote, to reflect this.

	* sanity.sh (abspath): Also do the "cannot rename" work-around for
	abspath-7d.

1998-05-13  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* commit.c (commit_filesdoneproc): Free admin_dir when done with it.

1998-05-13  Jim Meyering  <meyering@ascend.com>

	* sanity.sh (editor): Change bogus sed command, `s/^/x&/g', to `s/^/x/'.
	The former exercised a bug in GNU sed-3.01-beta3.
	(emptydir-8): Add `Rebuilding administrative file database' message,
	since now it does that.
	* commit.c (commit_filesdoneproc): Pass only the admin directory
	pathname to mkmodules.
	Remove #if 0, now that it's fixed.

	* status.c (cvsstatus): Rename from `status' to avoid shadowing
	lots of locals and parameters by the same name.
	* server.c (serve_status): Update caller.
	* main.c (cmds[]): Update table entry.
	* cvs.h: Update prototype.

	* commit.c (commit_filesdoneproc): Remove trailing blanks.
	(commit) [CLIENT_SUPPORT]: Remove unnecessary (and local-shadowing)
	declaration of `err'.
	Rename global `tag' to `saved_tag' to avoid overshadowing `tag'
	parameters of three functions.
	Rename global `message' to `saved_message' to avoid overshadowing
	`message' parameter of a function.
	Rename global `ulist' to `saved_ulist' and move dcl up with others.

1998-05-12  Jim Kingdon  <kingdon@harvey.cyclic.com>
